<resources>
    <string name="app_name">Bar</string>
    <string name="login_hint">Login</string>
    <string name="passcode_hint">Pin code</string>
    <string name="welcome"><b>Drink &amp; Enjoy</b></string>
    <string name="title_activity_admin__home">"Admin "</string>
    <string name="action_settings">logout</string>
    <string name="title_activity_admin_home">Admin</string>
    <string name="hint_lname">Last Name</string>
    <string name="hint_fname">First Name</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_email">Email</string>
    <string name="register">creating user....</string>
    <string name="btn_sign_up">Create User</string>
    <string name="action_stock">Available stock</string>
    <string name="action_users">Users</string>
    <string name="edit_hit">Edit Items</string>
    <string name="brand_name_hint">Enter brand name</string>
    <string name="brand_items_hint">Enter number of items</string>
    <string name="summary_hint"><b>SALES SUMMARY</b></string>
    <string name="total_collected_hint">Total collected</string>
    <string name="number_of_sales_hint">Number of sales made</string>
    <string name="gross_sales_hint">TOTAL SALES</string>
    <string name="category_of_sales_hint">CATEGORY SALES</string>
    <string name="title_activity_list_users">Users List</string>
    <string name="title_activity_stock">Stock Listings</string>
    <string name="user_name_hit">Enter user name</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="price_hint">Price</string>
    <string name="price_per_hint">Full botle Price</string>
    <string name="number_of_tots_per_botle">Number of tots per botle</string>
    <string name="price_of_tot_per_botle">Price of each tot</string>
    <string name="items_sku_hint">SKU</string>
    <string name="category_edit_hint">Edit category</string>
    <string name="new_category_hint">Enter Category name</string>
</resources>
