<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="wrap_content"

    android:id="@+id/general_layout"
android:orientation="vertical">

<LinearLayout
    android:id="@+id/layout_general"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginRight="@dimen/margin_32"
    android:layout_marginLeft="@dimen/margin_32">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <EditText
            android:id="@+id/brand_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/brand_name_hint"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <EditText
            android:id="@+id/items_total"
            android:hint="@string/brand_items_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </android.support.design.widget.TextInputLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="3dp"
            android:layout_marginTop="10dp">
            <EditText
                android:id="@+id/items_price"
                android:hint="@string/price_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="10dp">
            <EditText
                android:id="@+id/items_sku"
                android:hint="@string/items_sku_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
</LinearLayout>
<Button
    android:id="@+id/general_save_btn"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="5dp"
    android:paddingTop="5dp"
    android:text="@string/save"
    android:layout_marginTop="10dp"
    android:textAllCaps="false"
    android:textColor="@color/white"
    android:background="@color/colorPrimary"
    android:textAlignment="center"
    android:layout_marginLeft="@dimen/margin_16"
    android:layout_marginRight="@dimen/margin_16"/>
</LinearLayout>