<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.aggreycliford.barapp.Fragments.Add_User">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ScrollView
                android:layout_centerInParent="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:background="@color/white"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:paddingBottom="40dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_40"
                        android:layout_marginRight="@dimen/margin_40"
                        android:layout_gravity="center"
                        android:tint="@color/colorPrimary"
                        android:src="@drawable/routepro"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:weightSum="2">
                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/input_layout_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="3dp"
                            android:layout_weight="1">

                            <EditText
                                android:id="@+id/input_name"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:singleLine="true"
                                android:inputType="textPersonName"
                                android:hint="@string/hint_fname" />
                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/input_layout_secondname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="3dp"
                            android:layout_weight="1">

                            <EditText
                                android:id="@+id/input_secondname"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:singleLine="true"
                                android:inputType="textPersonName"
                                android:hint="@string/hint_lname" />
                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="3dp"
                        android:layout_weight="1">

                        <EditText
                            android:id="@+id/input_phone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            android:inputType="phone"
                            android:hint="@string/hint_phone" />
                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/input_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress"
                            android:hint="@string/hint_email" />
                    </android.support.design.widget.TextInputLayout>

                    <Button android:id="@+id/btn_signup"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_sign_up"
                        android:background="@color/colorPrimary"
                        android:layout_marginTop="20dp"
                        android:textColor="@android:color/white"/>


                </LinearLayout>
            </ScrollView>
        </RelativeLayout>
    </LinearLayout>

</FrameLayout>
